# notion-mcp

./: .env.example  CLAUDE.md  README.md  pyproject.toml
src/notion_mcp/: client.py  config.py  server.py
src/notion_mcp/tools/: blocks.py  mentions.py  pages.py  tasks.py
